--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lottie-react-native": "^5.1.6",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-svg": "^13.10.0"
   },
   "devDependencies": {
