--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-linear-gradient": "^2.7.3",
     "react-native-svg": "^13.10.0"
   },
   "devDependencies": {
