--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "expo": "~48.0.18",
     "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
+    "install": "^0.13.0",
     "lottie-react-native": "^5.1.6",
+    "npm": "^9.8.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-responsive-linechart": "^5.7.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-svg": "^13.10.0"
   },
