--- a/package.json
+++ b/package.json
@@ -21,11 +21,16 @@
     "lottie-react-native": "^5.1.6",
     "npm": "^9.8.0",
     "react": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.71.8",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-gesture-handler": "^2.12.0",
     "react-native-responsive-linechart": "^5.7.1",
     "react-native-safe-area-context": "^4.7.1",
-    "react-native-svg": "^13.10.0"
+    "react-native-screens": "^3.22.1",
+    "react-native-svg": "13.4.0",
+    "react-native-web": "~0.18.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
