--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.4.0",
     "expo": "~48.0.18",
+    "expo-barcode-scanner": "~12.3.2",
     "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
     "install": "^0.13.0",
