--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.12.0",
+    "react-native-maps": "^1.7.1",
     "react-native-responsive-linechart": "^5.7.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.22.1",
