--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~48.0.18",
     "expo-barcode-scanner": "~12.3.2",
     "expo-linear-gradient": "~12.1.2",
+    "expo-location": "~15.1.1",
     "expo-status-bar": "~1.4.4",
     "install": "^0.13.0",
     "lottie-react-native": "^5.1.6",
